Fixed bug #35470 (Assigning global using variable name from array doesn't function)